feat: pulsing live dots per section, always-visible prediction, cleaner Expected Open card

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 
         <!-- Section 1: USD Metals -->
         <section class="section">
-            <div class="section-label">International Markets</div>
+            <div class="section-label">
+                <span class="live-dot" id="dot-international"></span>
+                International Markets
+            </div>
             <div class="cards-grid">
 
                 <!-- Gold USD -->
@@ -146,7 +149,10 @@
 
         <!-- Section 2: MCX Futures (India) -->
         <section class="section" id="section-mcx">
-            <div class="section-label">Indian Commodity Market</div>
+            <div class="section-label">
+                <span class="live-dot" id="dot-mcx"></span>
+                Indian Commodity Market
+            </div>
             <div class="cards-grid">
 
                 <!-- Gold Mini MCX -->
@@ -196,7 +202,10 @@
 
         <!-- Section 2: NSE BeES ETFs -->
         <section class="section">
-            <div class="section-label">NSE BeES ETFs</div>
+            <div class="section-label">
+                <span class="live-dot" id="dot-bees"></span>
+                NSE BeES ETFs
+            </div>
             <div class="cards-grid">
 
                 <!-- Gold BeES -->
@@ -247,9 +256,11 @@
         </section>
 
 
-        <!-- Section 4: Gap Prediction -->
         <section class="section">
-            <div class="section-label">Tomorrow's Expected Open</div>
+            <div class="section-label">
+                <span class="live-dot" id="dot-prediction"></span>
+                Tomorrow's Expected Open
+            </div>
             <div class="cards-grid">
 
                 <!-- Gold BeES Expected Open -->
@@ -257,11 +268,6 @@
                     <div class="prediction-header">
                         <i class="fa-solid fa-bolt text-gold"></i>
                         <span>Expected Gold BeES Open</span>
-                    </div>
-                    <div class="market-open-msg">
-                        <i class="fa-solid fa-circle-check" style="font-size:2rem;color:var(--up)"></i>
-                        <span>🟢 Market is Open</span>
-                        <span style="font-size:0.82rem;font-weight:500;opacity:0.75">Prediction will be available after 3:30 PM IST</span>
                     </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
@@ -289,11 +295,6 @@
                     <div class="prediction-header">
                         <i class="fa-solid fa-bolt text-silver"></i>
                         <span>Expected Silver BeES Open</span>
-                    </div>
-                    <div class="market-open-msg">
-                        <i class="fa-solid fa-circle-check" style="font-size:2rem;color:var(--up)"></i>
-                        <span>🟢 Market is Open</span>
-                        <span style="font-size:0.82rem;font-weight:500;opacity:0.75">Prediction will be available after 3:30 PM IST</span>
                     </div>
                     <div class="card-price prediction-price">
                         <span class="price-currency">₹</span>
