feat: add Market News native feed page with theme integration

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <span>Mohit's Tracker</span>
             </a>
             <div class="nav-actions">
+                <a href="telegram.html" class="btn-icon" aria-label="Market News" title="Market News"
+                    style="text-decoration: none;">
+                    <i class="fa-solid fa-newspaper"></i>
+                </a>
                 <button id="theme-toggle" class="btn-icon" aria-label="Toggle theme">
                     <i class="fa-solid fa-moon" id="theme-icon"></i>
                 </button>
@@ -279,7 +283,8 @@
                             <span class="price-currency">₹</span>
                             <span class="price-value large" id="expected-goldbees"></span>
                         </div>
-                        <div class="model-badge"><i class="fa-solid fa-brain"></i> ML Model &nbsp;·&nbsp; R²≈0.91 &nbsp;·&nbsp; β=0.88</div>
+                        <div class="model-badge"><i class="fa-solid fa-brain"></i> ML Model &nbsp;·&nbsp; R²≈0.91
+                            &nbsp;·&nbsp; β=0.88</div>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
@@ -309,7 +314,8 @@
                             <span class="price-currency">₹</span>
                             <span class="price-value large" id="expected-silverbees"></span>
                         </div>
-                        <div class="model-badge"><i class="fa-solid fa-brain"></i> ML Model &nbsp;·&nbsp; R²≈0.87 &nbsp;·&nbsp; β=0.82</div>
+                        <div class="model-badge"><i class="fa-solid fa-brain"></i> ML Model &nbsp;·&nbsp; R²≈0.87
+                            &nbsp;·&nbsp; β=0.82</div>
                     </div>
                     <div class="gap-table">
                         <div class="gap-row">
