Replace telegram channel with max_geopolitic

--- a/telegram.html
+++ b/telegram.html
@@ -186,7 +186,7 @@
         async function loadTelegramFeed() {
             const feedContainer = document.getElementById('telegram-feed');
             try {
-                const targetUrl = 'https://t.me/s/war_upd';
+                const targetUrl = 'https://t.me/s/max_geopolitic';
                 let htmlContent = null;
 
                 // Proxy 1: corsproxy.io (Returns raw HTML)
